# pmcomm

./: LICENSE.txt  README  THIRD-PARTY.txt
lib/: README
lib/example/: README
lib/include/: displayformat.h  libpmcomm.h  periodicdata.h  pmdefs.h  profiledata.h  programformat.h
lib/src/: efficiencydata.c  libpmcomm.c  pmconnection.c  profiledata.c  programformat.c
libpmcomm/: CMakeLists.txt
libpmcomm/example/: Makefile  main.cpp
libpmcomm/include/: efficiencydata.h  pmconnection.h
libpmcomm/src/: displayformat.c  periodicdata.c  pmconnection.c
pmcomm/: Info.plist  alarmlistmodel.cpp  alarmlistmodel.h  appsettings.cpp  appsettings.h  datafetcher.cpp  datafetcher.h  displaypanel.cpp  displaypanel.h  displaypicker.cpp  displaypicker.h  displaypickerdialog.cpp  displaypickerdialog.h  displaytablemodel.cpp  displaytablemodel.h  displayvalue.cpp  displayvalue.h  downloadoptionsdialog.cpp  downloadoptionsdialog.h  ipv4validator.cpp  ipv4validator.h  loggeddata.cpp  loggeddata.h  loggeddownloaddialog.cpp  loggeddownloaddialog.h  loggeddownloader.cpp  loggeddownloader.h  loggedvalue.cpp  loggedvalue.h  mac-package.sh  main.cpp  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  pmcomm.icns  pmcomm.pro  pmcomm.rc  pmconnectionwrapper.cpp  pmconnectionwrapper.h  (+16 more)
